--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div id="calculator">
         <div id="interface">
-            <textarea id="screen"></textarea>
+            <textarea id="screen" readonly></textarea>
             <div id="buttonPad">
                 <div id="numberKeys">
                     <button id="zero" class="number">0</button>
