--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
                     <button id="multiply" class="operator">*</button>
                     <button id="divide" class="operator">/</button>
                     <button id="equals" class="operator">=</button>
+                    <button id="clear" class="operator">CLR</button>
                 </div>
             </div>
         </div>
