--- a/index.html
+++ b/index.html
@@ -13,24 +13,25 @@
             <textarea id="screen" readonly></textarea>
             <div id="buttonPad">
                 <div id="numberKeys">
-                    <button id="zero" class="number">0</button>
-                    <button id="one" class="number">1</button>
-                    <button id="two" class="number">2</button>
-                    <button id="three" class="number">3</button>
-                    <button id="four" class="number">4</button>
-                    <button id="five" class="number">5</button>
-                    <button id="six" class="number">6</button>
-                    <button id="seven" class="number">7</button>
-                    <button id="eight" class="number">8</button>
-                    <button id="nine" class="number">9</button>
+                    <button id="nine" class="number key">9</button>
+                    <button id="eight" class="number key">8</button>
+                    <button id="seven" class="number key">7</button>
+                    <button id="six" class="number key">6</button>
+                    <button id="five" class="number key">5</button>
+                    <button id="four" class="number key">4</button>
+                    <button id="three" class="number key">3</button>
+                    <button id="two" class="number key">2</button>
+                    <button id="one" class="number key">1</button>
+                    <button id="zero" class="number key">0</button>
+                    
                 </div>
                 <div id="operatorKeys">
-                    <button id="add" class="operator">+</button>
-                    <button id="subtract" class="operator">-</button>
-                    <button id="multiply" class="operator">*</button>
-                    <button id="divide" class="operator">/</button>
-                    <button id="equals" class="operator">=</button>
-                    <button id="clear" class="operator">CLR</button>
+                    <button id="add" class="operator key">+</button>
+                    <button id="subtract" class="operator key">-</button>
+                    <button id="multiply" class="operator key">*</button>
+                    <button id="divide" class="operator key">/</button>
+                    <button id="equals" class="operator key">=</button>
+                    <button id="clear" class="operator key">CLR</button>
                 </div>
             </div>
         </div>
