working on decimal functionality

--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
                     <button id="three" class="number key">3</button>
                     <button id="two" class="number key">2</button>
                     <button id="one" class="number key">1</button>
+                    <button id="decimal" class="number key">.</button>
                     <button id="zero" class="number key">0</button>
+                    
                     
                 </div>
                 <div id="operatorKeys">
