add delete button

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
                     <button id="multiply" class="operator key">*</button>
                     <button id="divide" class="operator key">/</button>
                     <button id="equals" class="operator key">=</button>
+                    <button id="delete" class="operator key">DEL</button>
                     <button id="clear" class="operator key">CLR</button>
                 </div>
             </div>
